<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NAVIGUER.DZ</string>
    <string name="title_activity_main">Principale</string>
    <string name="title_activity_edit_profile">Mon profil</string>
    <string name="search_hint">Chercher...</string>
    <string name="own_business">Ajouter activités ou Announces?</string>
    <string name="sign_up">S\'inscrire</string>
    <string name="change_image">Changer la photo</string>
    <string name="name">Nom complet</string>
    <string name="email_hint">Email</string>
    <string name="age_hint">Âge</string>
    <string name="phone">Numéro de téléphone</string>
    <string name="current_password">Mot de passe actuel</string>
    <string name="new_password">Nouveau mot de passe</string>
    <string name="confirm_password">Confirmez le mot de passe</string>
    <string name="visiable">Visible</string>
    <string name="verify">Vérifier</string>
    <string name="save_changes">Sauvegarder</string>
    <string name="picture_chooser_title">Choisissez votre image</string>
    <string name="error_image">Erreur lors du choix de l\'image</string>
    <string name="error_occurred">Erreur est survenue</string>
    <string name="image_changed">Image modifiée avec succès</string>
    <string name="reload">Recharger</string>
    <string name="district">WILAYA/District</string>
    <string name="city">COMMUNE/Ville</string>
    <string name="loadin">Chargement....</string>
    <string name="forget_password">Mot de passe oublié?</string>
    <string name="login">S\'identifier</string>
    <string name="or">Ou</string>
    <string name="enter_email">Entrez votre adresse e-mail</string>
    <string name="wrong_email">Adresse e-mail incorrecte</string>
    <string name="wrong_password">Mauvais mot de passe</string>
    <string name="error_upload_pic">Erreur au chargement d\'image</string>
    <string name="change_password">Changer le mot de passe</string>
    <string name="change">Changement</string>
    <string name="not_match">Le mot de passe ne correspond pas</string>
    <string name="error_edit_profile">Erreur au Modification du profil</string>
    <string name="done_editing">Finis d\'éditer</string>
    <string name="choose_image_first">Choisir l\'image d\'abord</string>
    <string name="failed_send_email">Échec de l\'envoi d\'email</string>
    <string name="phone_short">Numéro de téléphone invalide</string>
    <string name="profile_created">Profil créé</string>
    <string name="error_occurred_password">Une erreur s\'est produite ,Vérifiez votre mot de passe.</string>
    <string name="title_activity_add_business">Ajouter activité/Announce </string>
    <string name="choose_image">Ajouter une image commerciale</string>
    <string name="business_title">Nom/Description</string>
    <string name="add_location">Précisez l\'emplacement de votre activité</string>
    <string name="about_me">Informations/Prix</string>
    <string name="category">Catégorie</string>
    <string name="copy_right">Copyrights © %1$d</string>
    <string name="sub_category">Spécialité</string>
    <string name="business_added">Votre activité/entreprise/Announce est désormais à la disposition du monde…</string>
    <string name="business_about_empty">A votre disposition..</string>
    <string name="verify_email_first">Vérifiez votre email d\'abord</string>
    <string name="ok">Ok</string>
    <string name="permission_location">Accéder à votre localisation/GPS</string>
    <string name="no_gps">Aucun GPS n\'est activé, Allez dans Paramètres?</string>
    <string name="cancel">Annuler</string>
    <string name="location_permission_not_granted">Emplacement: Autorisation non accordée</string>
    <string name="location_permission_granted">Emplacement: Permission accordée</string>
    <string name="action_log_out">Se déconnecter</string>
    <string name="log_out_action">Etes-vous sûr de vous déconnecter?</string>
    <string name="success_add_place">Votre activité est sur la carte</string>
    <string name="extra_business_id">identificateur d\'activité</string>
    <string name="business_header">Mon Activite/Annonce</string>
    <string name="about_us">Naviguer.dz est une application qui vous permet non seulement de localiser vos lieux utiles (ex: médecins / pharmaciens / cliniques/ commerces / entreprises / agences / Taxi, etc ...), mais aussi de faire la promotion et la publicité de vos activités professionnelles.
            Pour vous commentaires veuillez écrire à : affak.development@gmail.com</string>
    <string name="contact_mail">affak.development@gmail.com</string>
    <string name="required_location">Veuillez choisir l\'emplacement de votre entreprise/activité.</string>
    <string name="required_city">Veuillez choisir la COMMUNE/Ville</string>
    <string name="internt_error">Vérifier la connexion internet !!</string>
    <string name="error_add_place">Erreur a ajouter un lieu</string>
    <string name="no_info_error">Error au chargement des détails du lieu</string>
    <string name="connect_us">Connecte-toi avec nous</string>
    <string name="title_bg_screen">NAVIGUER.DZ</string>
    <string name="title_bg_screen1">NAVIGUER.DZ</string>
    <string name="title_bg_screen2">NAVIGUER.DZ</string>
    <string name="description_bg_screen">App collaborative où les professionnels se font connaître aux utilisateurs,et où vous pouvez poster vos annonces gratuitement. NAVIGUER.DZ permet aussi une messagerie directe.</string>
    <string name="description_bg_screen1">Vous voulez savoir où se trouvent la pharmacie, le medecin,le commerce, le taxi,l\'entreprise,etc..les plus proches?</string>
    <string name="description_bg_screen2">Vous voulez faire connaitre d\'avantage vos activites professionnelles et commerciales,et aussi poster vos annonces?</string>
    <string name="map_not_ready">Carte non prête</string>
    <string name="no_places">Aucun lieu trouvé</string>
    <string name="title_search_filter">Filtre</string>
    <string name="search">Chercher</string>
    <string name="search_title">Filtrer ma carte</string>
    <string name="title_activity_marker_details">Markeur Details d\'Activité</string>
    <string name="error_phone">Aucun téléphone fourni...</string>
    <string name="title_about_us">Information/Prix</string>
    <string name="inbox">Messages reçus</string>
    <string name="title_activity_inbox">Boîte de réception</string>
    <string name="password">Mot de passe</string>
    <string name="sign_in">connecter</string>
    <string name="required_field">Champ requis</string>
    <string name="check_your_email">Vérifiez votre Email</string>
    <string name="recover_password_title">Mot de passe oublié!</string>
    <string name="button_text_send">Envoyer</string>
    <string name="login_error">Erreur d\'identification</string>
    <string name="user_image">Image du profile</string>
    <string name="user_name">Nom d\'utilisateur</string>
    <string name="message">message</string>
    <string name="error_occured">Erreur est survenue</string>
    <string name="title_activity_conversion">Conversation</string>
    <string name="online">En ligne</string>
    <string name="offline">Hors ligne</string>
    <string name="write_message">Écrire un message...</string>
    <string name="login_first">Connectez-vous d\'abord</string>
    <string name="location_current">Votre Position</string>
    <string name="filter">Filtre activités</string>
    <string name="myplaces">Mes lieux</string>
    <string name="phone_error">Voulez vous ajouter votre propre activité/announce?</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBoNomMFZovBlV8-V2LQgR7MyD4TNtFCJI</string>
    <string name="error_mail">Email non fourni</string>
    <string name="about">A propos</string>
    <string name="exit">Déconnecter</string>
    <string name="exit_warnning">Etes-vous sûr de vous déconnecter</string>
    <string name="delete">yes</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="add_Bussines">Ajouter</string>
    <string name="add_business">Ajouter</string>
    <string name="add_business_warnning">Ajouter un nouvel activité/announce?</string>

    <string name="ad_mob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_mob_full_screen_id">ca-app-pub-0243484158988577/9196272994</string>
    <string name="ad_mob_init_id">ca-app-pub-3940256099942544~3347511713</string>

    <string name="ad_mob_real_banner_id">ca-app-pub-1670144099232554/1310561221</string>
    <string name="ad_mob_real_full_screen_id">ca-app-pub-1670144099232554/5719984023</string>
    <string name="ad_mob_real_id">ca-app-pub-1670144099232554~4403628425</string>

    <string name="choose_category">Choisir Categorie</string>
    <string name="title_activity_google_places_details">Details d\'Emplacement</string>
    <string name="location_here">Resultats ici</string>
    <string name="choose_places">Choisir source d\'information</string>
    <string name="google_map_places">Positions Google </string>
    <string name="app_places">Positions NAVIGUER </string>
    <string name="choose">Choisir</string>
    <string name="about_app">A propos</string>

</resources>
