<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@drawable/login_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >

        <ImageView
            android:layout_marginTop="56dp"
            android:src="@drawable/intro3"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:layout_gravity="center_horizontal"
            android:id="@+id/imageView" />

        <!--  Email Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textColorHint="@color/colorPrimary"
            >
            <EditText
                android:textColor="@color/colorPrimary"
                android:gravity="start"
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email_hint" />
        </android.support.design.widget.TextInputLayout>

        <!--  Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:textColorHint="@color/colorPrimary"
            >
            <EditText
                android:textColor="@color/colorPrimary"
                android:id="@+id/login_password"
                android:gravity="start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:padding="18sp"
            android:text="@string/login"/>

        <TextView
            android:id="@+id/link_forget_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/forget_password"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"/>

        <LinearLayout
            android:weightSum="5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <View
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>

            <TextView
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/or"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorPrimary"/>
            <LinearLayout
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <View
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/sign_up_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:text="@string/sign_up"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            />

    </LinearLayout>

</ScrollView>