<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/inbox_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <ImageView
        android:layout_centerVertical="true"
        android:id="@+id/inbox_user_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/profile_image"
        android:contentDescription="@string/user_image"/>

    <LinearLayout
        android:layout_toLeftOf="@+id/last_message_time"
        android:layout_toStartOf="@+id/last_message_time"
        android:layout_toRightOf="@+id/inbox_user_image"
        android:layout_toEndOf="@+id/inbox_user_image"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <TextView
                tools:text="@string/name"
               android:textSize="16sp"
                android:textColor="@color/primary_text"
                android:id="@+id/inbox_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                />

        <TextView
            android:id="@+id/last_message_txt"
            android:maxLines="1"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/message"
            android:textSize="14sp"/>

    </LinearLayout>

    <TextView
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/last_message_time"
        android:maxLines="1"
        android:textSize="9sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        tools:text="message time"/>

</RelativeLayout>

